OPHYK-436 remove junit 4 and use junit 5 in tests